objects/Mass_Email__c.object
<CustomObject>
    <fields>
        <fullName>CC_To__c</fullName>
        <label>CC To</label>
        <picklist>
            <picklistValues>
                <fullName>All Primary POCs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All POCs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Email Alias 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Email Alias 2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>From_In_Text__c</fullName>
        <inlineHelpText>A workflow updates this field from a picklist &apos;From&apos;.</inlineHelpText>
        <label>From (In Text)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <inlineHelpText>This field holds the &quot;Display Name&quot; from the Organization-Wide Email Addresses defined in your org.</inlineHelpText>
        <label>From</label>
        <picklist>
            <picklistValues>
                <fullName>CCADB Support</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Mozilla CA Program Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft CA Program Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google CA Program Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current User</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reply_To_In_Text__c</fullName>
        <inlineHelpText>A workflow updates this field from a picklist &apos;Reply To&apos;.</inlineHelpText>
        <label>Reply To (In Text)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reply_To__c</fullName>
        <label>Reply To</label>
        <picklist>
            <picklistValues>
                <fullName>Mozilla CA Program Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft CA Program Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google CA Program Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current User</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SOQL_Filter_Conditions__c</fullName>
        <label>SOQL Filter Conditions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Send_To__c</fullName>
        <label>Send To</label>
        <picklist>
            <picklistValues>
                <fullName>All Primary POCs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All POCs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Email Alias 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Email Alias 2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_Eligible_to_Send_Mass_Email__c</fullName>
        <formula>IF (OR( 

AND(CONTAINS(From_In_Text__c, &quot;Mozilla&quot;), 
CONTAINS(Reply_To_In_Text__c, &quot;Mozilla&quot;), 
CONTAINS($Profile.Name, &quot;Mozilla&quot;)), 

AND(CONTAINS(From_In_Text__c, &quot;Microsoft&quot;), 
CONTAINS(Reply_To_In_Text__c, &quot;Microsoft&quot;), 
CONTAINS($Profile.Name, &quot;Microsoft&quot;)), 

AND(CONTAINS(From_In_Text__c, &quot;Google&quot;), 
CONTAINS(Reply_To_In_Text__c, &quot;Google&quot;), 
CONTAINS($Profile.Name, &quot;Google&quot;)), 

AND(CONTAINS(From_In_Text__c, &quot;Current User&quot;), 
CONTAINS(Reply_To_In_Text__c, &quot;Mozilla&quot;), 
CONTAINS($Profile.Name, &quot;Mozilla&quot;)), 

AND(CONTAINS(From_In_Text__c, &quot;Current User&quot;), 
CONTAINS(Reply_To_In_Text__c, &quot;Microsoft&quot;), 
CONTAINS($Profile.Name, &quot;Microsoft&quot;)),

AND(CONTAINS(From_In_Text__c, &quot;Current User&quot;), 
CONTAINS(Reply_To_In_Text__c, &quot;Google&quot;), 
CONTAINS($Profile.Name, &quot;Google&quot;)), 

AND(CONTAINS(From_In_Text__c, &quot;Mozilla&quot;), 
CONTAINS(Reply_To_In_Text__c, &quot;Current User&quot;), 
CONTAINS($Profile.Name, &quot;Mozilla&quot;)), 

AND(CONTAINS(From_In_Text__c, &quot;Microsoft&quot;), 
CONTAINS(Reply_To_In_Text__c, &quot;Current User&quot;), 
CONTAINS($Profile.Name, &quot;Microsoft&quot;)), 

AND(CONTAINS(From_In_Text__c, &quot;Google&quot;), 
CONTAINS(Reply_To_In_Text__c, &quot;Current User&quot;), 
CONTAINS($Profile.Name, &quot;Google&quot;)), 

AND(CONTAINS(From_In_Text__c, &quot;CCADB Support&quot;), 
CONTAINS(Reply_To_In_Text__c, &quot;Current User&quot;)),

AND(CONTAINS(From_In_Text__c, &quot;CCADB Support&quot;), 
CONTAINS(Reply_To_In_Text__c, &quot;Mozilla&quot;), 
CONTAINS($Profile.Name, &quot;Mozilla&quot;)), 

AND(CONTAINS(From_In_Text__c, &quot;CCADB Support&quot;), 
CONTAINS(Reply_To_In_Text__c, &quot;Microsoft&quot;), 
CONTAINS($Profile.Name, &quot;Microsoft&quot;)),

AND(CONTAINS(From_In_Text__c, &quot;CCADB Support&quot;), 
CONTAINS(Reply_To_In_Text__c, &quot;Google&quot;), 
CONTAINS($Profile.Name, &quot;Google&quot;)),

AND(CONTAINS(From_In_Text__c, &quot;Current User&quot;), 
CONTAINS(Reply_To_In_Text__c, &quot;Current User&quot;))
), 
TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Match profile of current/logged in user with &apos;From&apos; user and &apos;Reply To&apos; user (Used by Mass Email Batch pgm)</inlineHelpText>
        <label>User Eligible to Send Mass Email?</label>
        <type>Checkbox</type>
    </fields>
    <label>Mass Email</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>From__c</columns>
        <columns>Reply_To__c</columns>
        <columns>Send_To__c</columns>
        <columns>CC_To__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E{0000}</displayFormat>
        <label>Mass Email Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_for_From_User</fullName>
        <active>true</active>
        <errorConditionFormula>IF (OR (ISPICKVAL(From__c, &quot;Current User&quot;), ISPICKVAL(From__c, &quot;CCADB Support&quot;)), FALSE,
AND(
NOT(AND (CONTAINS($Profile.Name, &quot;Mozilla&quot;),
 ISPICKVAL(From__c,&quot;Mozilla CA Program Manager&quot;))),
NOT(AND (CONTAINS($Profile.Name, &quot;Microsoft&quot;),
 ISPICKVAL(From__c,&quot;Microsoft CA Program Manager&quot;))),
NOT(AND (CONTAINS($Profile.Name, &quot;Google&quot;),
 ISPICKVAL(From__c,&quot;Google CA Program Manager&quot;)))
)
)</errorConditionFormula>
        <errorMessage>Please select &apos;From&apos; address which represent your company or select &apos;CCADB Support&apos; &apos;Current User&apos; from the list</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_for_Reply_To_User</fullName>
        <active>true</active>
        <errorConditionFormula>IF (ISPICKVAL(Reply_To__c, &quot;Current User&quot;), FALSE,
AND(
NOT(AND (CONTAINS($Profile.Name, &quot;Mozilla&quot;),
 ISPICKVAL(Reply_To__c,&quot;Mozilla CA Program Manager&quot;))),
NOT(AND (CONTAINS($Profile.Name, &quot;Microsoft&quot;),
 ISPICKVAL(Reply_To__c,&quot;Microsoft CA Program Manager&quot;))),
NOT(AND (CONTAINS($Profile.Name, &quot;Google&quot;),
 ISPICKVAL(Reply_To__c,&quot;Google CA Program Manager&quot;)))
)
)</errorConditionFormula>
        <errorMessage>Please select &apos;Reply To&apos; address which represent your company or select &apos;Current User&apos; from the list</errorMessage>
    </validationRules>
</CustomObject>